--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+}
+
 body {
     background-image: url(/asset/1169862.jpg);
     color: bisque;
@@ -24,6 +28,11 @@ p,li,td {
     color:beige;
     font-family: sans-serif;
     font-size: large;
+}
+
+.h5 {
+  color: antiquewhite;
+
 }
 
 table {
